<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_action_pic"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/ic_action_clock_dark"
        android:title="@string/title_timer" />

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_action_notes"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_action_calendar_dark"
        android:title="@string/title_calendar" />


</menu>