<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Profile -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ICM_Project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- Dashboard -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ICM_Project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- Timer -->
    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.ICM_Project.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <!-- Tasks -->
    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.ICM_Project.ui.notes.NotesFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_notes" />

    <!-- Calendar -->
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.ICM_Project.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>