<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.timer.TimerFragment">


    <ProgressBar
        android:id="@+id/progressbar_timerview"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal|center"
        android:indeterminate="false"
        android:progressDrawable="@drawable/circleshape2_timerview" />


    <TextView
        android:id="@+id/textView_timerview_time"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerInParent="true"
        android:alpha="0.6"
        android:background="@drawable/circleshape_timerview"
        android:gravity="center"
        android:text="00:00:00"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressbar1_timerview"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal|center"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circleshape1_timerview"
            android:visibility="gone" />


    <Button
        android:id="@+id/button_timerview_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="90dp"
        android:background="#89CCCC"
        android:text="@string/startTimer"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="#89CCCC" />

    <Button
        android:id="@+id/button_timerview_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="100dp"
        android:background="#bbb"
        android:text="@string/stopTimer"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="#bbb" />

    <EditText
        android:id="@+id/textview_timerview_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:ems="3"
        android:hint="@string/hour"
        android:textAlignment="center"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="175dp"
        android:ems="3"
        android:hint="@string/min"
        android:textAlignment="center"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextNumberDecimal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:ems="3"
        android:textAlignment="center"
        android:hint="@string/sec"
        android:inputType="numberDecimal" />


</RelativeLayout>

