<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.course.CourseFragment"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/evalutationInfo"
                android:layout_width="380dp"
                android:layout_height="140dp"
                android:layout_marginTop="320dp"
                android:background="@drawable/rectangle_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/courseInfo"
                android:layout_width="380dp"
                android:layout_height="220dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/rectangle_course_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/statisticsInfo"
                android:layout_width="380dp"
                android:layout_height="120dp"
                android:layout_marginTop="485dp"
                android:background="@drawable/rectangle_statistcs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/information"
                android:textColor="@color/black"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="@+id/courseInfo"
                app:layout_constraintStart_toStartOf="@+id/courseInfo"
                app:layout_constraintTop_toTopOf="@+id/courseInfo" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/yearCourse"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/courseInfo"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/semesterCourse"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/courseInfo"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/courseYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/loading"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/semesterCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/loading"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/courseYear" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/responsibleCourse"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/courseInfo"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/responsibleCourse"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:text="@string/loading"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/semesterCourse" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/evaluationCourse"
                android:textColor="@color/black"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="@+id/evalutationInfo"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/evalutationInfo"
                app:layout_constraintTop_toTopOf="@+id/evalutationInfo" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/examCourse"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/evalutationInfo"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/courseExam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/loading"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/textview"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/statisticsCourse"
                android:textColor="@color/black"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="@+id/statisticsInfo"
                app:layout_constraintStart_toStartOf="@+id/statisticsInfo"
                app:layout_constraintTop_toTopOf="@+id/statisticsInfo" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/time_spent"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/statisticsInfo"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <TextView
                android:id="@+id/timeSpent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/loading"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <Button
                android:id="@+id/setTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:text="@string/set_timer"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statisticsInfo" />

            <Button
                android:id="@+id/writeNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@android:color/transparent"
                android:text="@string/write_note"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statisticsInfo" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:text="---"
                app:layout_constraintTop_toBottomOf="@+id/statisticsInfo"
                tools:layout_editor_absoluteX="186dp" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_action_back"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-4dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

