<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/fragment_home"
    android:fillViewport="true"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:text="@string/loading"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <!-- CardView for subjects -->

        <TextView
            android:id="@+id/your_subjects_tv"
            android:layout_width="127dp"
            android:layout_height="33dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/subjects_text"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myRectangleView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_subjects_tv" />

        <View
            android:id="@+id/myRectangleView"
            android:layout_width="350dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nome_tv" />

        <TextView
            android:id="@+id/upcoming_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/upcoming"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/myRectangleView"
            app:layout_constraintTop_toBottomOf="@+id/nome_tv" />


        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_settings" />


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_action_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/upcomingListView"
            android:layout_width="270dp"
            android:layout_height="75dp"
            app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
            app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="@+id/myRectangleView"
            app:layout_constraintTop_toTopOf="@+id/myRectangleView"
            app:layout_constraintVertical_bias="0.925" />

        <FrameLayout
            android:id="@+id/profilefrag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>